--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,7 @@ knitr::opts_chunk$set(
   [![Codecov test coverage](https://codecov.io/gh/bcjaeger/aorsf/branch/master/graph/badge.svg)](https://app.codecov.io/gh/bcjaeger/aorsf?branch=master)
 [![R-CMD-check](https://github.com/bcjaeger/aorsf/workflows/R-CMD-check/badge.svg)](https://github.com/bcjaeger/aorsf/actions)
 [![Status at rOpenSci Software Peer Review](https://badges.ropensci.org/532_status.svg)](https://github.com/ropensci/software-review/issues/532)
+<a href="https://joss.theoj.org/papers/414871f081cd8449007d671a7f7f7c3a"><img src="https://joss.theoj.org/papers/414871f081cd8449007d671a7f7f7c3a/status.svg"></a>
 <!-- badges: end -->
 
 `aorsf` provides optimized software to fit, interpret, and make predictions with oblique random survival forests (ORSFs).  
@@ -74,8 +75,6 @@ The `orsf()` function can fit several types of ORSF ensembles. My personal favor
 
 ```
 
-ORSF CONTROL VIGNETTE (not yet written). 
-
 ### Inspect
 
 Printing the output from `orsf()` will give some information and descriptive statistics about the ensemble.
@@ -86,7 +85,9 @@ fit
 
 ```
 
-See [`print.orsf_fit`](https://bcjaeger.github.io/aorsf/reference/print.orsf_fit.html) for a description of each line in the printed output.
+- See [print.orsf_fit](https://bcjaeger.github.io/aorsf/reference/print.orsf_fit.html) for a description of each line in the printed output.
+
+- See [orsf examples](https://bcjaeger.github.io/aorsf/reference/orsf.html#examples) for more details on controlling ORSF ensemble fits and using them in prediction modeling workflows.
 
 ### Variable importance
 
@@ -116,52 +117,36 @@ The importance of individual variables can be estimated in three ways using `aor
   
   ```
 
-You can supply your own R function to estimate out-of-bag error when using negation or permutation importance (see [oob vignette](https://bcjaeger.github.io/aorsf/articles/oobag.html)). 
+You can supply your own R function to estimate out-of-bag error when using negation or permutation importance. This feature is experimental and may be changed in the future (see [oob vignette](https://bcjaeger.github.io/aorsf/articles/oobag.html))
 
-### Predict
+### Partial dependence (PD) 
 
+`r aorsf:::roxy_pd_explain()`
 
+For more on PD, see the [vignette](https://bcjaeger.github.io/aorsf/articles/pd.html)
 
-### Partial dependence
+### Individual conditional expectations (ICE)
 
-`aorsf` can generate individual conditional expectation (ICE) and partial dependence (PD): 
-
-- ICE shows how the predicted value for an observation changes when a predictor changes. `orsf_ice()`, the function to compute ICE values in `aorsf`, returns ICE for all observations in the data you supply it. (If no data are supplied, the ORSF's training data are used)
-
-  ```{r}
-  
-  # ICE values:
-  # predicted risk for a single observation with respect to bili.
-  
-  orsf_ice_oob(fit, pred_spec = list(bili = c(1:5)))[id_row == 2]
-  
-  ```
-
-- PD shows how the **expected** predicted value changes when a predictor changes. PD estimates the relationship between the model's prediction and a predictor, adjusting for other predictors.
-
-  ```{r}
-  
-  orsf_pd_oob(fit, pred_spec = list(bili = c(1:5)))
-  
-  ```
+`r aorsf:::roxy_ice_explain()`
 
 
-- use `orsf_summarize_uni()` to show the top predictor variables in an ORSF model and the expected predicted risk at specific values of those predictors. (The term 'uni' is short for univariate.)
-
-  ```{r}
-
-  # take a look at the top 5 variables 
-  # for continuous predictors, see expected risk at 25/50/75th quantile
-  # for categorical predictors, see expected risk in specified category
-
-  orsf_summarize_uni(object = fit, n_variables = 5)
-
-  ```
+For more on ICE, see the [vignette](https://bcjaeger.github.io/aorsf/articles/pd.html#individual-conditional-expectations-ice)
 
 ## Comparison to existing software
 
-Jaeger (2022) describes `aorsf` in detail, with a summary of the procedures used in the tree fitting algorithm and a general benchmark comparing `aorsf` with `obliqueRSF` (and several other learners) in terms of prediction accuracy and computational efficiency. 
+Comparisons between `aorsf` and existing software are presented in our [arXiv paper](https://arxiv.org/abs/2208.01129). The paper
 
+- describes `aorsf` in detail with a summary of the procedures used in the tree fitting algorithm 
+
+- runs a general benchmark comparing `aorsf` with `obliqueRSF` and several other learners 
+
+- reports prediction accuracy and computational efficiency of all learners.
+
+- runs a simulation study comparing variable importance techniques with ORSFs, axis based RSFs, and boosted trees.
+
+- reports the probability that each variable importance technique will rank a relevant variable with higher importance than an irrelevant variable.
+
+A more hands-on comparison of `aorsf` and other R packages is provided in [orsf examples](https://bcjaeger.github.io/aorsf/reference/orsf.html#tidymodels)
 
 
 ## References
